[SV2-302] unalignment fix

--- a/resources/assets/less/base/tool/partials/campaign/email-canvas.less
+++ b/resources/assets/less/base/tool/partials/campaign/email-canvas.less
@@ -107,6 +107,7 @@
 		.box-sizing(border-box);
 		min-width: 650px;
 		background-color: #F4F4F4;
+		padding-top: 40px;
 	}
 
 	.st-validation-error {
